@@ -1,5 +1,10 @@
 2006-10-20  Richard Sandiford  <richard@codesourcery.com>
 
+	* elfxx-mips.c (_bfd_mips_elf_modify_segment_map): Don't extend
+	PT_DYNAMIC on GNU/Linux targets.
+
+2006-10-20  Richard Sandiford  <richard@codesourcery.com>
+
 	* elfxx-mips.c (_bfd_mips_elf_finish_dynamic_sections): Make the
 	size of .rel.dyn reflect the value of DT_RELSZ.
 
